--- a/docker/compose/docker-compose.yml
+++ b/docker/compose/docker-compose.yml
@@ -13,17 +13,19 @@ services:
       OILTANK_CAMERA_RTSP_URL_FILE: "/run/secrets/oiltank_camera_rtsp_url"
 
       # MQTT connection info
-      OILTANK_MQTT_BROKER: "tcp://mqtt:1883"
-      OILTANK_MQTT_USERNAME: "homeassistant"
-
-      # Secrets via *_FILE pattern (handled in entrypoint.sh)
-      OILTANK_MQTT_PASSWORD_FILE: "/run/secrets/mqtt_password"
+      MQTT_HOST_FILE: "/run/secrets/mqtt_host"
+      MQTT_PORT_FILE: "/run/secrets/mqtt_port"
+      MQTT_USERNAME_FILE: "/run/secrets/mqtt_username"
+      MQTT_PASSWORD_FILE: "/run/secrets/mqtt_password"
 
       # Optional JVM tuning
       JAVA_OPTS: "-Xms256m -Xmx512m"
 
     # Map Docker secrets into /run/secrets
     secrets:
+      - mqtt_host
+      - mqtt_port
+      - mqtt_username
       - mqtt_password
       - oiltank_camera_rtsp_url
 
@@ -32,6 +34,12 @@ services:
       - default
 
 secrets:
+  mqtt_host:
+    file: ../secrets/mqtt_host.txt
+  mqtt_port:
+    file: ../secrets/mqtt_port.txt
+  mqtt_username:
+    file: ../secrets/mqtt_username.txt
   mqtt_password:
     file: ../secrets/mqtt_password.txt
   oiltank_camera_rtsp_url:
