Converts CameraSnapshotService to a ControllableService. Adds SnapshotRequestSchedulerService.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ logging.level:
 
 application.camera:
   snapshot-url: "${OILTANK_CAMERA_RTSP_URL:}"
-  intervalSeconds: 10
+  snapshot-interval-ms: 30000
 
 application.level:
   minPercent: 20
